--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,10 @@ h6 {
 
 .section-iteams-team {
   width: 270px;
+  background-color: var(--third-color-text);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .section-iteams-team:not(:last-child) {
@@ -403,6 +407,56 @@ h6 {
 
 /*Cоц сети*/
 
+.footer .social-list {
+  display: flex;
+}
+
+.socials {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50px;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+}
+
+.socials:not(:last-child) {
+  margin-right: 10px;
+}
+
+/*.footer .insta {
+  background-image: url(../image/instagram.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer .twit {
+  background-image: url(../image/twitter.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer .face {
+  background-image: url(../image/facebook.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer .linked {
+  background-image: url(../image/linkedin.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}*/
+
+.footer .insta:hover,
+.footer .twit:hover,
+.footer .face:hover,
+.footer .linked:hover {
+  background-color: var(--accent-color);
+}
+
 .social-list .social-link {
   color: var(--third-color-text);
 }
@@ -552,6 +606,7 @@ h6 {
 .port-list {
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 94px;
 }
 
 .port-img {
@@ -570,5 +625,8 @@ h6 {
 
 .port-items:nth-last-child(-n + 3) {
   margin-bottom: 0;
-  padding-bottom: 94px;
+}
+
+.port-list .port-items:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
