--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ h6 {
   width: calc((100% - 90px) / 4);
 }
 
+/*
 .section-items::before {
   display: flex;
   content: '';
@@ -278,6 +279,23 @@ h6 {
 
 .astronaut::before {
   background-image: url(../image/astronaut.svg);
+}
+*/
+
+.container-advantages {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-advantages {
+  width: 70px;
+  height: 70px;
+  align-items: center;
 }
 
 .section-items:not(:last-child) {
