--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,9 @@ h6 {
 
 .section-heroy .hero-title {
   margin-bottom: 40px;
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
 
   color: var(--third-color-text);
 
@@ -221,6 +224,8 @@ h6 {
   display: inline-block;
   min-width: 200px;
   padding: 10px 32px;
+  border: 0px;
+  border-radius: 4px;
 
   color: var(--third-color-text);
   background-color: var(--accent-color);
@@ -284,7 +289,6 @@ h6 {
 */
 
 .container-advantages {
-  width: 270px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
@@ -470,8 +474,8 @@ h6 {
   border-color: var(--accent-color);
 }
 
-.logo-client:hover,
-.logo-client:focus {
+.client-bgt:hover svg,
+.client-bgt:focus svg {
   fill: var(--accent-color);
 }
 
@@ -566,16 +570,16 @@ h6 {
   fill: #afb1b8;
 }
 
-.logo-social:hover,
-.logo-social:focus {
+.social-link:hover svg,
+.social-link:focus svg {
   fill: var(--third-color-text);
 }
-
+/*
 .social-link:hover,
 .social-link:focus {
   color: var(--accent-color);
 }
-
+*/
 .footer {
   background-color: #2f303a;
 }
@@ -655,6 +659,8 @@ h6 {
 .port-button:focus {
   color: #ffffff;
   background-color: var(--accent-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
 .port-button {
