--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,24 @@ h6 {
   color: var(--accent-color);
 }
 
+.nav .link.current::after {
+  position: absolute;
+
+  content: '';
+  display: inline-block;
+  height: 4px;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
+.nav-list .nav-items {
+  position: relative;
+}
+
 .nav-contakt,
 .nav-list {
   font-weight: 500;
@@ -330,9 +348,15 @@ h6 {
   text-align: center;
 }
 
-.section-title.invisible {
-  display: none;
-  padding-top: 112px;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .section-subtitle {
@@ -374,6 +398,7 @@ h6 {
 
 .work-items {
   width: calc((100% - 60px) / 3);
+  position: relative;
 }
 
 .work-items:not(:last-child) {
@@ -389,7 +414,16 @@ h6 {
   margin-bottom: 50px;
 }
 
+/*
+.work-link {
+  position: relative;
+}
+*/
 .work {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -708,8 +742,21 @@ h6 {
   line-height: 1.88;
 }
 
+.port-description {
+  position: relative;
+}
+
 .port-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+
   margin: 0;
+  padding: 63px 24px;
 
   color: var(--third-color-text);
   background-color: rgba(33, 150, 243, 0.9);
@@ -745,4 +792,8 @@ h6 {
 
 .port-list .port-items:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.port-items:hover .port-text {
+  opacity: 1;
 }
